@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!-- generated by wxGlade 0.6.3 on Sat Nov 22 15:54:49 2008 -->
+<!-- generated by wxGlade 0.6.3 on Mon Mar 30 20:55:21 2009 -->
 
 <application path="/home/matts/svn/genx/trunk/genx/genx_gui.py" name="app" class="MyApp" option="0" language="python" top_window="main_frame" encoding="UTF-8" use_gettext="0" overwrite="0" use_new_namespace="1" for_version="2.6" is_template="0">
     <object class="MainFrame" name="main_frame" base="EditFrame">
@@ -307,24 +307,32 @@
                     </item>
                 </menu>
                 <menu name="" label="Misc">
-                    <item>
-                        <label>Models Help...</label>
-                        <name>mb_models_help</name>
-                        <help_str>Show help for the models</help_str>
-                        <handler>eh_mb_models_help</handler>
-                    </item>
-                    <item>
-                        <label>Plugins Helps...</label>
-                        <name>mb_plugins_help</name>
-                        <help_str>Show help for the plugins</help_str>
-                        <handler>eh_mb_plugins_help</handler>
-                    </item>
-                    <item>
-                        <label>Data loaders Help...</label>
-                        <name>mb_data_loaders_help</name>
-                        <help_str>Show help for the data loaders</help_str>
-                        <handler>eh_mb_data_loaders_help</handler>
-                    </item>
+                    <menu name="mb_help" label="Help">
+                        <item>
+                            <label>Models Help...</label>
+                            <name>mb_models_help</name>
+                            <help_str>Show help for the models</help_str>
+                            <handler>eh_mb_models_help</handler>
+                        </item>
+                        <item>
+                            <label>FOM Help</label>
+                            <name>mb_fom_help</name>
+                            <help_str>Show help about the fom</help_str>
+                            <handler>eh_mb_fom_help</handler>
+                        </item>
+                        <item>
+                            <label>Plugins Helps...</label>
+                            <name>mb_plugins_help</name>
+                            <help_str>Show help for the plugins</help_str>
+                            <handler>eh_mb_plugins_help</handler>
+                        </item>
+                        <item>
+                            <label>Data loaders Help...</label>
+                            <name>mb_data_loaders_help</name>
+                            <help_str>Show help for the data loaders</help_str>
+                            <handler>eh_mb_data_loaders_help</handler>
+                        </item>
+                    </menu>
                     <item>
                         <label>Show Manual...</label>
                         <name>mb_misc_showman</name>
